Entregada la P1 para la competición

--- a/3 GII/1er Semestre/DA/Prácticas/Práctica 1/RODRIGUEZ_HERAS_JESUS/p1/Makefile
+++ b/3 GII/1er Semestre/DA/Prácticas/Práctica 1/RODRIGUEZ_HERAS_JESUS/p1/Makefile
@@ -1,4 +1,4 @@
-APELLIDO1_APELLIDO2_NOMBRE = APELLIDO1_APELLIDO2_NOMBRE
+APELLIDO1_APELLIDO2_NOMBRE = RODRIGUEZ_HERAS_JESUS
 LEVEL = 3456
 
 ####################### FIN CONFIGURACION ###########################
