--- a/4 GII/2do Semestre/Administración de Servidores/Prácticas/Práctica 2/Vagrantfile
+++ b/4 GII/2do Semestre/Administración de Servidores/Prácticas/Práctica 2/Vagrantfile
@@ -13,23 +13,24 @@ Vagrant.configure("2") do |config|
   # Every Vagrant development environment requires a box. You can search for
   # boxes at https://vagrantcloud.com/search.
   config.vm.box = "debian/jessie64"
+  config.vm.provision :shell, path: "bootstrap.sh"
   
-  config.vm.define :VM1 do |VM1|
-  	VM1.vm.box="debian/jessie64"
-  	VM1.vm.hostname="VM1"
-  	VM1.vm.network "private_network", ip: "192.168.2.101"
+  config.vm.define :vm1 do |vm1|
+  	vm1.vm.box="debian/jessie64"
+  	vm1.vm.hostname="VM1"
+  	vm1.vm.network "private_network", ip: "192.168.2.101"
   end
   
-  config.vm.define :VM2 do |VM2|
-  	VM2.vm.box="debian/jessie64"
-  	VM2.vm.hostname="VM2"
-  	VM2.vm.network "private_network", ip: "192.168.2.102"
+  config.vm.define :vm2 do |vm2|
+  	vm2.vm.box="debian/jessie64"
+  	vm2.vm.hostname="VM2"
+  	vm2.vm.network "private_network", ip: "192.168.2.102"
   end
   
-  config.vm.define :VM3 do |VM3|
-  	VM3.vm.box="debian/jessie64"
-  	VM3.vm.hostname="VM3"
-  	VM3.vm.network "private_network", ip: "192.168.2.103"
+  config.vm.define :vm3 do |vm3|
+  	vm3.vm.box="debian/jessie64"
+  	vm3.vm.hostname="VM3"
+  	vm3.vm.network "private_network", ip: "192.168.2.103"
   end
 
   # Disable automatic box update checking. If you disable this, then
